[package]
name = "urlflatine"
version = "0.2.0"
edition = "2021"
description = "A web service that calculates a mubase multihash from a resource at a given URL"    

[dependencies]
actix-web = { version = "4.11.0" }
cid = "0.11.1"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
reqwest = "0.12"
serde = {version = "1.0.219", features = ["derive"]}
sha2 = "0.10.8"
env_logger = "0.11.3"
log = "0.4.21"
